# ciftipy

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  test.ipynb
ciftipy/: __init__.py  indexers.py  indexers.pyi  main.py  main.pyi  search_tokens.yaml  tokens.py  tokens.yaml
ciftipy/interfaces/: nib.py
delete_later/: search_tokens.yaml  test_nibabel.ipynb
docs/: conf.py  index.md
docs/_static/css/: typealiases.css
docs/api/: internals.rst  main.rst  plugins.rst
docs/bids_app/: config.md
docs/general/: why_snakebids.md
tests/: _test_cifti_search.py  helpers.py  strategies.py  structures.py  test_ciftipy.py  test_indexers.py
